update google analytics tracking id

--- a/config.toml
+++ b/config.toml
@@ -8,7 +8,7 @@ defaultContentLanguage = "en"
 # Enable comments by entering your Disqus shortname
 disqusShortname = "lomorage"
 # Enable Google Analytics by entering your tracking code
-googleAnalytics = ""
+googleAnalytics = "UA-138235951-1"
 
 # Define the number of posts per page
 paginate = 10
