--- a/config.toml
+++ b/config.toml
@@ -28,15 +28,25 @@ paginate = 10
 #    weight = 2
 
 [[menu.main]]
+    name = "Features"
+    url  = "/features/"
+    weight = 2
+
+[[menu.main]]
+    name = "Installation"
+    url  = "/installation/"
+    weight = 3
+
+[[menu.main]]
     name = "FAQ"
     identifier = "faq"
     url  = "/faq/"
-    weight = 3
+    weight = 4
 
 [[menu.main]]
     name = "Contact"
     url  = "/contact/"
-    weight = 4
+    weight = 5
 
 # Top bar social links menu
 
