--- a/data/features/federation.yaml
+++ b/data/features/federation.yaml
@@ -1,4 +1,4 @@
 weight: 6
-name: "federation"
+name: federationName
 icon: "fab fa-connectdevelop"
-description: "You and your friends can run different instances of services, but they don't need to be isolate islands, they can still share photos and videos with each other regardless of where their account is."
+description: federationDesc
