--- a/data/features/share.yaml
+++ b/data/features/share.yaml
@@ -1,4 +1,4 @@
 weight: 3
-name: "Share"
+name: shareName
 icon: "fa fa-users"
-description: "Create accounts for your family, create different groups and share moments with them securely."
+description: shareDesc
