--- a/.gitmodules
+++ b/.gitmodules
@@ -3,6 +3,6 @@
 	url = git@github.com:lomorage/lomorage.github.io.git
 	branch = master
 [submodule "hugo-universal-theme"]
-	path = themes/hugo-universal-theme.git
+	path = themes/hugo-universal-theme
 	url = git@github.com:lomorage/hugo-universal-theme.git
 	branch = master
