--- a/data/carousel/build-pi-service.yaml
+++ b/data/carousel/build-pi-service.yaml
@@ -1,4 +1,6 @@
 weight: 1
 title: carouselBuildPiServiceTitle
 description: carouselBuildPiServiceDesc
-image: "/img/carousel/lomo-with-pi.png"
+vwidth: 560
+vheight: 315
+videosrc: carouselVideoTutorial
