fix mobile page

--- a/data/carousel/build-pi-service.yaml
+++ b/data/carousel/build-pi-service.yaml
@@ -1,6 +1,6 @@
 weight: 1
 title: carouselBuildPiServiceTitle
 description: carouselBuildPiServiceDesc
-vwidth: 560
-vheight: 315
+vwidth: 100%
+vheight: 100%
 videosrc: carouselVideoTutorial
