--- a/static/release.json
+++ b/static/release.json
@@ -14,5 +14,8 @@
     "URL": "https://github.com/lomorage/LomoAgentWin/releases/download/2020_08_22.21_03_02.0.2f88662/lomoagent-2020_08_22.21_03_02.0.2f88662.zip",
     "LomoUpgVer": "2020_08_22.21_03_02.0.2f88662",
     "LomoUpdateURL": "https://github.com/lomorage/LomoAgentWin/releases/download/2020_08_22.21_03_02.0.2f88662/lomoupdate-2020_08_22.21_03_02.0.2f88662.zip"
+  },
+  "lomod": {
+    "Commit": "07bd005"
   }
 }
