--- a/data/testimonials/1.yaml
+++ b/data/testimonials/1.yaml
@@ -1,4 +1,2 @@
-text: "One morning, when Gregor Samsa woke from troubled dreams, he found himself transformed in his bed into a horrible vermin. He lay on his armour-like back, and if he lifted his head a little he could see his brown belly, slightly domed and divided by arches into stiff sections."
-name: "John McIntyre"
-position: "CEO, TransTech"
-avatar: "img/testimonials/person-1.jpg"
+text: "It works very well, thanks a lot for your help, you save my day with this docker version of Lomorage. Congratulations for this app."
+name: "Matthieu"
