--- a/data/testimonials/3.yaml
+++ b/data/testimonials/3.yaml
@@ -1,4 +1,2 @@
-text: "One morning, when Gregor Samsa woke from troubled dreams, he found himself transformed in his bed into a horrible vermin. He lay on his armour-like back, and if he lifted his head a little he could see his brown belly, slightly domed and divided by arches into stiff sections."
-name: "John McIntyre"
-position: "CEO, TransTech"
-avatar: "img/testimonials/person-3.png"
+text: "我觉得这将会是一个非常棒的构思。感谢您的开发。"
+name: "Sunset"
