add android version for testing

--- a/static/release.json
+++ b/static/release.json
@@ -17,5 +17,11 @@
   },
   "lomod": {
     "Commit": "8b7b9bd"
+  },
+
+  "android": {
+    "VersionCode": "26",
+    "ReleaseTime": "2021-06-10_11-21-43"
   }
+
 }
